--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -26,10 +26,11 @@ body:
   validations:
     required: true
 
-- type: input
+- type: dropdown
   attributes:
     label: Platform
     description: |
       If the issue is specific to a platform, providing your platform/OS will be very helpful.
+    options: ["Windows", "Linux", "Nintendo 3DS"]
   validations:
     required: true
