--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -14,7 +14,11 @@ body:
   attributes:
     label: Steps to reproduce
     description: |
-       How to reproduce the bug. Example: click on... press.. then go to... and then...
+       How to reproduce the bug.
+    placeholder: |
+       1. Go to...
+       2. Click....
+       3. Then...
   validations:
     required: true
      
