Added missing labels

--- a/.github/ISSUE_TEMPLATE/suggestion.yml
+++ b/.github/ISSUE_TEMPLATE/suggestion.yml
@@ -22,6 +22,7 @@ body:
 
 - type: checkboxes
   attributes:
+    label: Similar submissions
     description: Before submitting a suggestion, please search for similar suggestion in [issues](https://github.com/Wolfyxon/TurretSiege/issues)
     options:
       - label: I have done the search for similar suggestions
