--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -43,6 +43,7 @@ body:
 
 - type: checkboxes
   attributes:
+    label: Similar submissions
     description: Before submitting a bug, please search for similar [issues](https://github.com/Wolfyxon/TurretSiege/issues)
     options:
       - label: I have done the search for similar issues
