Hopefully fixed the lua install step

--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install lua
-      run: apt install lua5.3
+      run: sudo apt-get install -y lua5.3
 
     - name: Verify Lua syntax
       run: make parse
