--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "Lua.diagnostics.globals": [
         "love"
     ],
-    "makefile.configureOnOpen": false
+    "makefile.configureOnOpen": false,
+    "pixelbyte.love2d.srcDir": "src"
 }
